add static analysis ErrorProne